// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotSteps renders correctly 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-3.emotion-3 {
  margin-right: 8px;
}

.emotion-6 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-6.emotion-6 {
  margin-right: 0;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-6 emotion-1"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly useState function 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-3.emotion-3 {
  margin-right: 8px;
}

.emotion-6 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-6.emotion-6 {
  margin-right: 8px;
}

.emotion-30 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-30.emotion-30 {
  margin-right: 0;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-6 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-30 emotion-1"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly wit 10 steps, default step=4 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-3.emotion-3 {
  margin-right: 8px;
}

.emotion-12 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-12.emotion-12 {
  margin-right: 8px;
}

.emotion-30 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-30.emotion-30 {
  margin-right: 0;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-12 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-3 emotion-1"
    />
    <div
      class="emotion-2 emotion-30 emotion-1"
    />
  </div>
</DocumentFragment>
`;
